--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
+title: My Online Learning Downloader
+description: Download video courses, audiobooks and ePub ebooks
 logo: /assets/img/logo.png
 theme: jekyll-theme-minimal
