--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: My Online Learning Downloader
 description: Download video courses, audiobooks and ePub ebooks
 logo: /assets/img/logo.png
+btcwallet: bc1q4nqsmnzhsyn6zxx82lx0de7kn5uszdsm6e6wsx
 theme: jekyll-theme-minimal
